--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -426,6 +426,7 @@ body {
         text-align: right;
         padding: 40px 10px 10px 10px;
         color: white;
+        display: block;
     }
 
     #container_info h1 {
@@ -446,6 +447,7 @@ body {
 
     .under_container {
         margin: 0;
+        display: block;
     }
 
     .under_container h2 {
@@ -454,7 +456,7 @@ body {
     }
 
     .more_info {
-        display: flex;
+        display: block;
         flex-direction: column;
         justify-content:center;
         margin-top: 5px;
@@ -463,7 +465,7 @@ body {
 
     .box_info {
         text-align: center;
-        flex-basis: 100%;
+        flex-basis: 0%;
         padding: 20px 10px 20px 10px;
         border-bottom: 1px solid rgb(31, 101, 106);
         border-right: 0px;
