--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,13 +5,25 @@
     font-family: Helvetica;
     text-align: center;
 }
+h1, h2, h3, h4, h5, h6 {
+    padding: 10px;
+}
 
 a {
     text-decoration: none;
     color: white;
 }
 
+h2 a {
+    font-size: .95em;
+}
+
 body {
+    max-width: 100%;
+    margin: auto;
+}
+
+#container_body {
     max-width: 1280px;
     margin: auto;
 }
@@ -23,6 +35,32 @@ body {
     top:-20px;
     left:0;
     background-color: rgba(255, 255, 255, 0.75);
+}
+
+.white {
+    color: white;
+}
+
+.modal {
+    margin-top: -40px;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.85);
+    position: fixed;
+    display: none;
+}
+
+.img_modal {
+    height: 500px;
+    margin-top: 250px;
+    border: white solid 30px;
+}
+
+.close_modal {
+    position: relative;
+    margin-top: -29px;
+    margin-left: 0;
+    font-size: 1em;
 }
 
 #logo {
@@ -110,7 +148,7 @@ body {
 .box_info {
     text-align: center;
     flex-basis: 15%;
-    padding: 60px 20px 60px 20px;
+    padding: 30px 20px 30px 20px;
     border-right: 1px solid rgb(31, 101, 106);
 }
 
@@ -140,7 +178,7 @@ body {
 }
 
 .question {
-    border-top: 1px solid rgb(31, 101, 106);
+    /* border-top: 1px solid rgb(31, 101, 106); */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -176,7 +214,6 @@ body {
     padding: 10px;
     display: flex;
     text-align: center;
-    width: 80%
 }
 
 .text_revit2{
@@ -216,11 +253,6 @@ body {
     width: auto;
     max-height: 300px;
     transition: all 1s;
-}
-
-.revit_img:hover {
-    max-height: 600px;
-    justify-content: center;
 }
 
 .footer {
@@ -280,8 +312,11 @@ body {
 
 .matricula {
     padding: 30px 0;
+    justify-content: center;
+    width: 100%;
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
+    flex-wrap: wrap;
     text-align: center;
     background-color: rgb(63, 165, 172);
 }
@@ -379,6 +414,27 @@ body {
     height: 5px;
     background-color:white;
     margin: 20px 0;
+}
+
+.boxes_next {
+    width: 300px;
+    height: 100%;
+    background-color: white;
+    margin: 10px;
+    padding: 10px;
+}
+
+.frame_img_proximos {
+    height: 150px;
+    width: 300px;
+}
+
+.img_box_proximos {
+height: inherit;
+}
+
+.text-left {
+    text-align: left;
 }
 
 @media screen and (max-width:800px) {
@@ -585,4 +641,5 @@ body {
     #signature p{
         font-size: .8em;
     }
+
 }
