--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,7 +31,6 @@ h1, h2, h3, h4, h5, h6 {
 
 a {
     text-decoration: none;
-    color: white;
 }
 
 h2 a {
@@ -176,9 +175,8 @@ body {
 
 .nav_menu {
     display: flex;
+    align-items: center;
     justify-content: space-around;
-    margin-top: 20px;
-    margin-bottom: 20px;
     border-top: 1px solid rgb(31, 101, 106);
     border-bottom: 1px solid rgb(31, 101, 106);
     padding: 10px
@@ -394,7 +392,6 @@ body {
     text-align: left;
     display: flex;
     justify-content: center;
-    background-color: rgb(43, 43, 43);
     margin: auto;
     align-items: flex-end;
 }
@@ -421,23 +418,15 @@ body {
 
 }
 
-#signature {
-    border-top: 1px solid gray;
-    padding: 10px 0;
-    color: rgb(43, 43, 43);
-    text-align: center;
-}
-
 .icon_footer p, a {
     text-align: center;
     font-size: .7em;
-    color: rgb(43, 43, 43);
 }
 
 #map {
-   height: 400px;
-   width: 800px;
-   margin:30px;
+    height: 400px;
+    width: 100%;
+    margin: 40px 0px;
   }
 
  .text_white {
@@ -594,7 +583,6 @@ height: inherit;
     .nav_menu {
         display: flex;
         flex-direction: column;
-        margin: 5px;
         padding: 5px;
         margin-left: 0px;
         margin-right: 0px;
@@ -766,9 +754,8 @@ height: inherit;
     }
 
     #map {
-        width: 90%;
-        align-items: center;
-        margin: 5px 5px 15px 5px;
+        height: 250px;
+        margin: 8px 0px;
     }
 
     #signature p{
